cabal-version:      3.0 
name:               plutus-crypto-ecc
version:            0.1.0.0
license:            Apache-2.0
author:             perturbing
maintainer:         thomas.vellekoop@iohk.io

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas


library
    import:           lang
    exposed-modules:  Plutus.Crypto.Ed25519
                    , Plutus.Crypto.Ed25519.Field 
                    , Plutus.Crypto.Ed25519.Group
                    , Plutus.Crypto.Ed25519.Params
                    , Plutus.Crypto.Ed25519.Conversion
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        cardano-api            >=1.35
      , plutus-core            >=1.0.0
      , plutus-ledger-api      >=1.0.0
      , plutus-tx              >=1.0.0
      , plutus-tx-plugin       >=1.0.0
      , plutus-ledger          >=1.0.0
      , plutus-script-utils    >=1.0.0
      , base           >=4.9 && <5
      , bytestring
      , serialise
      , text
      , plutus-crypto-numbers



test-suite plutus-crypto-ecc-unit
  import:             lang
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:
    , base
    , bytestring
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , plutus-crypto-ecc
    , plutus-crypto-numbers

executable plutus-crypto-ecc-executable
    main-is:          Main.hs
    other-modules:    Validator
    build-depends:
        base >=4.9 && <5
      , cardano-api            >=1.35
      , plutus-core            >=1.0.0
      , plutus-ledger-api      >=1.0.0
      , plutus-tx              >=1.0.0
      , plutus-tx-plugin       >=1.0.0
      , plutus-ledger          >=1.0.0
      , plutus-script-utils    >=1.0.0
      , bytestring
      , serialise
      , text
      , aeson
      , plutus-crypto-ecc
      , plutus-crypto-numbers
    hs-source-dirs:   app
    default-language: Haskell2010
